[package]
name = "markdownlint-rs"
version = "0.3.2"
edition = "2024"
authors = ["Simon Swanson"]
description = "A fast, flexible, configuration-based command-line interface for linting Markdown/CommonMark files"
license = "MIT"
repository = "https://github.com/swanysimon/mdlint"
keywords = ["cli", "formatter", "lint", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mdlint"
path = "src/lib.rs"

[[bin]]
name = "mdlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
pulldown-cmark = "0.13.0"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
toml = "0.8"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.14"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
