[package]
name = "markdownlint-rs"
version = "0.3.14"
edition = "2024"
description = "A fast, flexible, configuration-based command-line interface for linting Markdown/CommonMark files"
repository = "https://github.com/swanysimon/mdlint"
license = "Unlicense"
keywords = ["cli", "formatter", "lint", "markdown"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "mdlint"
path = "src/lib.rs"

[[bin]]
name = "mdlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
lsp-server = "0.7"
lsp-types = "0.97"
pulldown-cmark = "0.13.0"
rayon = "1.10"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
toml = "0.8"
url = "2"

[dev-dependencies]
proptest = "1.6"
tempfile = "3.14"

[lints.clippy]
all = "deny"

[lints.rust]
warnings = "deny"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
