[project]
name = "markdownlint-rs"
version = "0.3.9"
description = "Opinionated Markdown formatter and linter"
readme = "README.md"
license = { text = "Unlicense" }
keywords = ["formatter", "linter", "markdown"]
classifiers = [
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/swanysimon/mdlint"
Issues = "https://github.com/swanysimon/mdlint/issues"
Repository = "https://github.com/swanysimon/mdlint"

[project.scripts]
mdlint = "mdlint.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mdlint"]
artifacts = ["mdlint/mdlint", "mdlint/mdlint.exe"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
